Table users {
  id integer [primary key, increment]
  username varchar
  created_at timestamp
}

Table carts {
  id integer [primary key, increment]
  user_id integer
  name varchar
}

Table items {
  id integer [primary key, increment]
  price float
  name varchar
}

Table item_in_cart {
  id integer [primary key, increment]
  cart_id integer
  item_id integer
  amount integer
}

ref: carts.user_id > users.id
ref: item_in_cart.cart_id > carts.id
ref: item_in_cart.item_id > items.id
